k8s/manifests-098f6b/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: journee-098f6b
  namespace: journee
  labels:
    app: journee-098f6b
spec:
  replicas: 1
  selector:
    matchLabels:
      app: journee-098f6b
  template:
    metadata:
      labels:
        app: journee-098f6b
    spec:
      imagePullSecrets:
        - name: gcr-pull-secret
      containers:
        - name: journee-098f6b
          image: gcr.io/my-docker-471807/journee:098f6b-369d3c
          ports:
            - containerPort: 3000
