k8s/manifests-098f6b/service.yml
apiVersion: v1
kind: Service
metadata:
  name: journee-098f6b
  namespace: journee
spec:
  selector:
    app: journee-098f6b
  ports:
    - port: 80
      targetPort: 3000
